--- a/src/components/cart-display/CartItems.css
+++ b/src/components/cart-display/CartItems.css
@@ -7,7 +7,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  z-index: 657;
+  z-index: 9999;
   transition: 0.4s;
   overflow-y: scroll;
 }
@@ -48,4 +48,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 2.4rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .cartItem__wrapper {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .cartItem__wrapper {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 574px) {
+  .cartItem__wrapper {
+    width: 100%;
+  }
 }
